--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.22",
+    "@sveltejs/adapter-node": "^1.0.0-next.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.26",
     "@sveltejs/kit": "next",
     "svelte": "^3.34.0",
     "svelte-fullpage": "^0.3.1"
